src/pages/chatroom/chatroom.scss
$accent-color: #8ECB06;
$base-color: #71afd0;
$instr-color: rgb(220, 220, 3);
page-chatroom {
    ion-header {
        position: relative;
        top: -5px;
    }

    .grid {
        height: 100%;
    }
    .row{
        height: 100%;
    }
    
    .float-right{
        right: 0;
        position: absolute;
        padding-right: 10px;
    }
    ion-navbar#InstructorHeader div.toolbar-background {
      background-color: $instr-color;
    }

    ion-navbar#InstructorHeader div.toolbar-title {
        color: white;
    }

    .toolbar-background {
        background-color: $accent-color;
    }
    
    // .toolbar-title {
    //     text-align: center;
    // }

    #StudentListTitle{
        padding: 5px;
        font-size: 2.0rem;
        color: white;
    }

    ion-input#CommentInput{
        border: solid 1px #dbdada;
        position: absolute;
        bottom: 0px;
    }

    #CommentList{
        width: 100%;
        height: 70vh;
        background-color: rgb(255, 255, 255);
        overflow: auto;
    }

    ion-col#ClassListPane{
        width: 100%;
        background-color: $base-color;
    }

    ion-col#ChatPane{
        width: 100%;
        height: 100%;
        position: relative;
        left: 0;
        right: 0;
        margin: auto;
    }

    button#SendBtn{
        position: absolute;
        bottom: 0;
        right: 0;
        margin: 0;
    }


}

